force-app/main/default/objects/Opportunity/fields/Active_Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Customer Project</label>
    <type>Checkbox</type>
</CustomField>