force-app/main/default/objects/Opportunity/fields/billing_city__c.field-meta.xml
<CustomField>
    <fullName>billing_city__c</fullName>
    <label>billing city</label>
    <length>18</length>
    <type>Text</type>
</CustomField>