force-app/main/default/objects/Opportunity/fields/client_contact__c.field-meta.xml
<CustomField>
    <fullName>client_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>client contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>