force-app/main/default/objects/Opportunity/fields/Oppr_LineItems_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>Oppr_LineItems_ProductCode__c</fullName>
    <label>Oppr LineItems ProductCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>