force-app/main/default/objects/Opportunity/fields/Quantity_custom__c.field-meta.xml
<CustomField>
    <fullName>Quantity_custom__c</fullName>
    <label>Quantity custom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>