force-app/main/default/objects/Opportunity/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <label>rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>warm</fullName>
            </value>
            <value>
                <fullName>cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>