force-app/main/default/objects/Opportunity/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>