force-app/main/default/objects/Opportunity/fields/Total_Line_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Item_Price__c</fullName>
    <label>Total Line Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>