force-app/main/default/objects/Opportunity/fields/Total_Line_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Item_Quantity__c</fullName>
    <label>Total Line Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>