force-app/main/default/objects/Opportunity/recordTypes/direct_sales.recordType-meta.xml
<RecordType>
    <fullName>direct_sales</fullName>
    <active>true</active>
    <businessProcess>direct sales</businessProcess>
    <label>direct sales</label>
</RecordType>