force-app/main/default/objects/Opportunity/recordTypes/inside_sales.recordType-meta.xml
<RecordType>
    <fullName>inside_sales</fullName>
    <active>true</active>
    <businessProcess>inside sales</businessProcess>
    <label>inside sales</label>
</RecordType>